# geneticAlgorithm

./: CMakeLists.txt  README  README.md  calc_max_not_paralel.cpp  calc_max_paralel.cpp  calculate_mininum.cpp  changed_calc.cpp  ga_for_function.py  genetic.cpp  makefile  run_example.py  run_example1.py
examples/: geneticalgorithm_example1.py
src/: GeneticAlgorithm.cpp  GeneticAlgorithm.h  Individual.cpp  Individual.h  Population.cpp  Population.h  ThreadedFunctions.cpp  ThreadedFunctions.h  crossover.cpp  main.cpp
src/GeneticAlgorithm/: GeneticAlgorithm.cpp  GeneticAlgorithm.h
src/Individual/: Individual.cpp  Individual.h
src/Population/: Population.cpp  Population.h
src/ThreadedFunctions/: ThreadedFunctions.cpp  ThreadedFunctions.h
test/: test1.cpp
